Fix map not showing in dark mode

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -45,3 +45,11 @@ p, svg, h1, h2, h3, h4, h5, h6{
   background: orange;
 }
 
+.open-map {
+  width: 40vw;
+  height: 40vw;
+}
+
+.banner-main-label {
+  line-height: '90%'
+}
